Ajout d'un favicon et d'un logo SVG pour améliorer l'identité visuelle de l'application. Mise à jour des styles CSS pour inclure une animation de scintillement et ajustement de la barre de chargement. Modification de l'état par défaut des filtres globaux pour être déplié. Nettoyage du code en supprimant les logs inutiles.

--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,10 @@
   <meta name="description" content="Visualiser le prix des billets de train" />
   <meta name="author" content="GaboFlo" />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/train-logo.svg" />
+  <link rel="icon" type="image/png" href="/train-logo.svg" />
+
   <meta property="og:title" content="Observatoire des billets de train" />
   <meta property="og:description" content="Visualiser le prix des billets de train" />
   <meta property="og:type" content="website" />
