--- a/front/index.html
+++ b/front/index.html
@@ -9,8 +9,7 @@
   <meta name="author" content="GaboFlo" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/train-logo.svg" />
-  <link rel="icon" type="image/png" href="/train-logo.svg" />
+  <link rel="icon" type="image/png" href="/logo.png" />
 
   <meta property="og:title" content="Observatoire des billets de train" />
   <meta property="og:description" content="Visualiser le prix des billets de train" />
