--- a/front/index.html
+++ b/front/index.html
@@ -13,8 +13,15 @@
   <meta name="robots" content="index, follow" />
   <meta name="language" content="French" />
   <meta name="theme-color" content="#2563eb" />
+  <meta name="msapplication-TileColor" content="#2563eb" />
+  <meta name="msapplication-config" content="/browserconfig.xml" />
 
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Observatoire des billets de train" />
+  <link rel="manifest" href="/site.webmanifest" />
   <link rel="canonical" href="https://observatoire-billets-train.gaboflo.fr/" />
 
   <meta property="og:title" content="Observatoire des billets de train - Analyse des prix des billets" />
@@ -38,7 +45,7 @@
     "@type": "WebApplication",
     "name": "Observatoire des billets de train",
     "description": "Application web permettant d'analyser et de visualiser les prix des billets de train grandes distances sur différentes routes, avec des statistiques détaillées et des graphiques d'évolution des tarifs.",
-    "url": "https://observatoire-billets-train.fr/",
+    "url": "https://observatoire-billets-train.gaboflo.fr/",
     "applicationCategory": "TravelApplication",
     "operatingSystem": "Web",
     "offers": {
