--- a/front/index.html
+++ b/front/index.html
@@ -5,15 +5,68 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Observatoire des billets de train</title>
-  <meta name="description" content="Visualiser le prix des billets de train" />
+  <meta name="description"
+    content="Analysez et visualisez les prix des billets de train grandes distances. Comparez les tarifs SNCF, TGV, OUIGO, Trenitalia et Eurostar sur différentes routes à origine ou destination de Paris. Statistiques détaillées, graphiques d'évolution des prix et filtres avancés." />
+  <meta name="keywords"
+    content="billets train, prix SNCF, tarifs TGV, observatoire prix train, comparaison prix train, billets OUIGO, Trenitalia, Eurostar, statistiques prix train, analyse tarifs ferroviaires" />
   <meta name="author" content="GaboFlo" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="French" />
+  <meta name="theme-color" content="#2563eb" />
+  <meta name="msapplication-TileColor" content="#2563eb" />
+  <meta name="msapplication-config" content="/browserconfig.xml" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Observatoire des billets de train" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="canonical" href="https://observatoire-billets-train.gaboflo.fr/" />
 
-  <meta property="og:title" content="Observatoire des billets de train" />
-  <meta property="og:description" content="Visualiser le prix des billets de train" />
+  <meta property="og:title" content="Observatoire des billets de train - Analyse des prix des billets" />
+  <meta property="og:description"
+    content="Analysez et visualisez les prix des billets de train grandes distances. Comparez les tarifs SNCF, TGV, OUIGO, Trenitalia  et Eurostar sur différentes routes avec statistiques détaillées et graphiques d'évolution." />
   <meta property="og:type" content="website" />
+  <meta property="og:image" content="/logo.png" />
+  <meta property="og:url" content="https://observatoire-billets-train.gaboflo.fr/" />
+  <meta property="og:locale" content="fr_FR" />
+  <meta property="og:site_name" content="Observatoire des billets de train" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Observatoire des billets de train" />
+  <meta name="twitter:description"
+    content="Analysez et visualisez les prix des billets de train grandes distances. Comparez les tarifs SNCF, TGV, OUIGO, Trenitalia et Eurostar sur différentes routes avec statistiques détaillées et graphiques d'évolution." />
+  <meta name="twitter:image" content="/logo.png" />
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Observatoire des billets de train",
+    "description": "Application web permettant d'analyser et de visualiser les prix des billets de train grandes distances sur différentes routes, avec des statistiques détaillées et des graphiques d'évolution des tarifs.",
+    "url": "https://observatoire-billets-train.gaboflo.fr/",
+    "applicationCategory": "TravelApplication",
+    "operatingSystem": "Web",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "EUR"
+    },
+    "featureList": [
+      "Analyse des prix des billets de train",
+      "Comparaison des tarifs SNCF, TGV, OUIGO, Trenitalia et Eurostar",
+      "Statistiques détaillées (prix min, max, moyen)",
+      "Graphiques d'évolution des prix",
+      "Filtres avancés par transporteur, classe, carte de réduction",
+      "Visualisation des trajets sur carte"
+    ],
+    "author": {
+      "@type": "Person",
+      "name": "GaboFlo"
+    }
+  }
+  </script>
 
 </head>
 
