--- a/front/index.html
+++ b/front/index.html
@@ -23,6 +23,10 @@
   <meta name="apple-mobile-web-app-title" content="Observatoire des billets de train" />
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="canonical" href="https://observatoire-billets-train.gaboflo.fr/" />
+  
+  <link rel="preconnect" href="https://server.observatoire-billets-train.gaboflo.fr" crossorigin />
+  <link rel="dns-prefetch" href="https://server.observatoire-billets-train.gaboflo.fr" />
+  <link rel="dns-prefetch" href="https://matomo.gaboflo.fr" />
 
   <meta property="og:title" content="Observatoire des billets de train - Analyse des prix des billets" />
   <meta property="og:description"
